# ModernColoryrMinecraftLauncher

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  vcpkg.json
.cargo/: config.toml
mcml/: CMakeLists.txt
mcml-async/: CMakeLists.txt
mcml-async/include/: core_thread.hpp  io_context_pool.hpp
mcml-async/src/: core_thread.cpp  io_context_pool.cpp
mcml-auth/: Cargo.toml
mcml-auth/src/: auths.rs  lib.rs
mcml-auth/src/legacy/: authenticate_obj.rs  authlib_injector.rs  gui_select_handel.rs  little_skin.rs  login_res.rs  mod.rs  nide8.rs  refresh_obj.rs  selected_profile_obj.rs
mcml-auth/src/oauth/: mod.rs  oauth_get_code.rs  oauth_obj.rs  xbox_obj.rs
mcml-auth/tests/: test.rs
mcml-base/: Cargo.toml
mcml-base/src/: checker.rs  events.rs  file_item.rs  hash_helper.rs  inner_path.rs  lib.rs  path_helper.rs  process_utils.rs  serialize_tools.rs  zip_runner.rs
mcml-base/src/archives/: base_archive.rs  mod.rs  r7z_runner.rs  tar_runner.rs  zip_runner.rs
mcml-base/src/events/: core_jvm_change.rs  mod.rs
mcml-base/tests/: archives.rs  hash.rs  process_utils.rs  zip.rs
mcml-base/tests/test_zip/: test.text
mcml-core/: .gitignore  CMakeLists.txt  Cargo.toml
mcml-core/include/: core.hpp  event.hpp
mcml-core/include/net/: http_client.hpp  ssl_context.hpp
mcml-core/include/net/downloader/: download_item.h  download_task.h
mcml-core/mcml-auth/src/legacy/: authenticate_obj.rs  mod.rs  nide8.rs
mcml-core/mcml-auth/src/oauth/: oauth_res.rs
mcml-core/mcml-base/: Cargo.toml
mcml-core/mcml-base/src/: builder.rs  checker.rs  hash_helper.rs  path_helper.rs  process_utils.rs  serialize_tools.rs
mcml-core/mcml-base/src/archives/: base_archive.rs  mod.rs  r7z_runner.rs  tar_runner.rs  zip_runner.rs
mcml-core/mcml-config/: Cargo.toml
mcml-core/mcml-config/src/: config_obj.rs  config_save.rs
mcml-core/mcml-downloader/: Cargo.toml
mcml-core/mcml-downloader/src/: download_item.rs  download_thread.rs  later_tasks.rs  lib.rs
mcml-core/mcml-game/: Cargo.toml
mcml-core/mcml-game/src/: class_scan.rs  game_arg.rs  game_export.rs  game_lan.rs  game_log.rs  game_resourcepacks.rs  game_saves.rs  game_schematics.rs  lib.rs
mcml-core/mcml-game/src/curseforge/: curseforge_pack_obj.rs  mod.rs
mcml-core/mcml-game/src/launcher/: custom_loader_obj.rs  file_online_info_obj.rs
mcml-core/mcml-game/src/launcher_path/: assets_path.rs  instance_path.rs  version_path.rs
mcml-core/mcml-game/src/loader/: custom.rs  fabric.rs  fabric_loader_obj.rs  forge_install_obj.rs  liteloader.rs  mod.rs  optifine_obj.rs  quilt.rs  quilt_loader_obj.rs  quilt_meta_obj.rs
mcml-core/mcml-game/src/mojang/: assets_obj.rs  mod.rs  version_checker.rs
mcml-core/mcml-game/tests/: game.rs  lan.rs  schematics.rs  shaderpacks.rs
mcml-core/mcml-game/tests/tomls/: test.toml
mcml-core/mcml-jvms/: Cargo.toml
mcml-core/mcml-jvms/tests/: info.rs
mcml-core/mcml-log/: Cargo.toml
mcml-core/mcml-log/src/: lib.rs
mcml-core/mcml-names/src/: lib.rs  uuids.rs
mcml-core/mcml-names/src/i18/: zh_cn.rs
mcml-core/mcml-names/src/i18_items/: panic_type.rs  thread_type.rs
mcml-core/mcml-nbt/: Cargo.toml
mcml-core/mcml-nbt/src/: lib.rs  nbt_file.rs
mcml-core/mcml-nbt/tests/: nbt_file.rs  nbt_types.rs  r.0.0.mca
mcml-core/mcml-net/src/: adoptium_api.rs  curseforge_api.rs  fabric_api.rs  input_file.rs  lib.rs  maven_utils.rs  mojang_api.rs  optifine_api.rs  quilt_api.rs  url_helper.rs  urls.rs
mcml-core/mcml-net/tests/: fabric_test.rs  java_test.rs  quilt_test.rs
mcml-core/mcml-skin-draw/src/: head_3d_draw.rs  lib.rs
mcml-core/mcml-skin-render/: Cargo.toml
mcml-core/mcml-skin-render/src/: cube.rs
mcml-core/src/: core.cpp  core.rs  lib.rs  names.rs
mcml-core/src/config/: config.rs  config_obj.rs  config_save.rs  mod.rs
mcml-core/src/events/: core_stop_event.rs  mod.rs
mcml-core/src/gui_handels/: gui_download_handel.rs  gui_progress_handel.rs  mod.rs
mcml-core/src/log/: log.rs  log_item.rs  log_level.rs  mod.rs
mcml-core/src/net/: http_client.cpp  ssl_context.cpp
mcml-core/tests/: config_tests.rs  core_test.rs  download_tests.rs  events_tests.rs  nbt.rs
mcml-downloader/: Cargo.toml
mcml-downloader/src/: download_item.rs  download_task.rs  download_thread.rs  lib.rs
mcml-downloader/tests/: download.rs
mcml-game/: Cargo.toml
mcml-game/src/: dyn_file.rs  game_arg.rs  game_check.rs  game_download.rs  game_export.rs  game_lan.rs  game_launch.rs  game_libraries.rs  game_log.rs  game_mod.rs  game_mods.rs  game_options.rs  game_resourcepacks.rs  game_saves.rs  game_schematics.rs  game_screenshots.rs  game_server.rs  game_shaderpacks.rs  lib.rs  path_watch.rs
mcml-game/src/launch_path/: assets_path.rs  mod.rs  version_path.rs
mcml-game/src/launcher/: custom_game_arg_obj.rs  custom_loader_obj.rs  file_online_info_obj.rs  game_setting_obj.rs  game_time_obj.rs  instance_setting_obj.rs  mod.rs
mcml-game/src/launcher_path/: assets_path.rs  instance_path.rs  libraies_path.rs  libraries_path.rs  mod.rs  version_path.rs
mcml-game/src/loader/: custom.rs  fabric.rs  fabric_api.rs  fabric_loader_obj.rs  fabric_meta_obj.rs  forge.rs  forge_launch_obj.rs  liteloader.rs  liteloader_meta_obj.rs  mod.rs  optifine.rs  optifine_obj.rs  quilt.rs
mcml-game/src/mojang/: game_arg_obj.rs  game_obj.rs  mod.rs  mojang_api.rs  version_checker.rs  version_obj.rs  version_parse.rs
mcml-game/tests/: mods.rs  run.rs  version.rs
mcml-http/: Cargo.toml
mcml-http/src/: lib.rs
mcml-http/tests/: test.rs
mcml-log/: CMakeLists.txt  Cargo.toml
mcml-log/include/: log.hpp
mcml-log/src/: lib.rs  log.cpp  log.rs  log_item.rs
mcml-log/tests/: log_tests.rs
mcml-net/: Cargo.toml
mcml-net/src/: adoptium_api.rs  authlib_api.rs  coloryr_api.rs  lib.rs  liteloader_api.rs  maven_utils.rs  nide8_api.rs  optifine_api.rs  url_helper.rs  urls.rs
mcml-net/src/net/: adoptium_api.rs  authlib_api.rs  coloryr_api.rs  fabric_api.rs  mod.rs  mojang_api.rs  nide8_api.rs  optifine_api.rs
mcml-net/tests/: fabric_test.rs  java_test.rs  quilt_test.rs
mcml/src/: main.cpp
mcml/ui/: main.slint
(+99 files in other folders)
