[package]
name = "mcml"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "~1.16", features = ["backend-winit", "renderer-skia"] }
trpl = "~0.3.0"
mcml-skin = { path = "./mcml-skin" }
mcml-skin-draw = { path = "./mcml-skin-draw" }
mcml-skin-render = { path = "./mcml-skin-render" }
mcml-core = { path = "./mcml-core" }
mcml-log = { path = "./mcml-log" }

[build-dependencies]
slint-build = "~1.16"
tauri-winres = "~0.3.5"

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = [
    "mcml-auth",
    "mcml-config",
    "mcml-core",
    "mcml-downloader",
    "mcml-http",
    "mcml-log",
    "mcml-names",
    "mcml-nbt",
    "mcml-net",
    "mcml-skin",
    "mcml-skin-draw",
    "mcml-skin-render",
]

[workspace.dependencies]
const_format = "~0.2.35"
crossbeam-queue = "~0.3.12"
tokio = "~1.52.1"
tokio-util = "~0.7.18"
semrs = "~0.5.2"
reqwest = { version = "~0.13.2", features = ["json", "stream", "form"] }
chrono = "~0.4.44"
serde = { version = "~1.0.228", features = ["derive"] }
serde_json = "~1.0.149"
serde_repr = "~0.1.20"
glow = "~0.17.0"
skia-safe = "~0.90.0"
glam = "~0.32.1"
lazy_static = "~1.5.0"
