[package]
name = "mcml-core"
version = "0.1.0"
edition = "2024"

[dependencies]
mcml-log = { path = "mcml-log" }
mcml-names = { path = "mcml-names" }
mcml-config = { path = "mcml-config" }
mcml-downloader = { path = "mcml-downloader" }
mcml-base = { path = "mcml-base" }
mcml-net = { path = "mcml-net" }
crossbeam-queue.workspace = true
tokio.workspace = true
tokio-util.workspace = true
semrs.workspace = true
chrono.workspace = true

[build-dependencies]

[profile.release]

[workspace]
members = [
    "mcml-auth",
    "mcml-base",
    "mcml-config",
    "mcml-downloader",
    "mcml-game",
    "mcml-jvms",
    "mcml-log",
    "mcml-names",
    "mcml-nbt",
    "mcml-net",
    "mcml-skin",
    "mcml-skin-draw",
    "mcml-skin-render",
]

[workspace.dependencies]
crossbeam-queue = "~0.3.12"
tokio = { version = "~1.52.3", features = [
    "rt",
    "macros",
    "io-util",
    "process",
    "fs",
] }
tokio-util = "~0.7.18"
semrs = "~0.5.2"
reqwest = { version = "~0.13.4", features = ["json", "stream", "form"] }
chrono = { version = "~0.4.45", features = ["serde"] }
serde = { version = "~1.0.228", features = ["derive"] }
serde_json = "~1.0.150"
serde_repr = "~0.1.20"
glow = "~0.17.0"
skia-safe = "~0.97.2"
glam = "~0.33.1"
uuid = { version = "~1.23.3", features = ["v4", "serde"] }
url = "~2.5.8"
md-5 = "~0.11.0"
sha1 = "~0.11.0"
digest = "~0.11.3"
sha2 = "~0.11.0"
base64 = "~0.22.1"
winreg = "~0.56.0"
windows-sys = { version = "~0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
] }
zip = { version = "~8.6.0", features = ["chrono"] }
tar = "~0.4.46"
flate2 = "~1.1.9"
sevenz-rust2 = "~0.21.0"
xz2 = { version = "~0.1.7", features = ["static"] }
lz4_flex = "~0.13.1"
rayon = "~1.12.0"
sys-locale = "~0.3.2"
regex = "~1.12.4"
scraper = "~0.27.0"
itertools = "~0.14.0"
semka = "~2.0.7"
soft-canonicalize = "~0.5.6"
async-trait = "~0.1"
