[package]
name = "mcml-base"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
lazy_static.workspace = true
md5.workspace = true
sha1.workspace = true
sha2.workspace = true
base64.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "~0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
] }
