[package]
name = "mcml-base"
version = "0.1.0"
edition = "2024"

[dependencies]
mcml-names = { path = "../mcml-names" }
tokio.workspace = true
lazy_static.workspace = true
md5.workspace = true
sha1.workspace = true
sha2.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
zip.workspace = true
tar.workspace = true
flate2.workspace = true
sevenz-rust2.workspace = true
chrono.workspace = true
xz2.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true