[package]
name = "mcml-core"
version = "0.1.0"
edition = "2024"

[dependencies]
const_format = "0.2.35"
crossbeam-queue = "0.3.12"
tokio = "1.52.1"
tokio-util = "0.7.18"
semrs = "0.5.2"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"

[lib]
path = "src/lib.rs"