[package]
name = "mcml-core"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-queue.workspace = true
tokio.workspace = true
tokio-util.workspace = true
semrs.workspace = true
chrono.workspace = true
mcml-log = { path = "../mcml-log" }
mcml-names = { path = "../mcml-names" }
mcml-config = { path = "../mcml-config" }
mcml-downloader = { path = "../mcml-downloader" }
mcml-http = { path = "../mcml-http" }
