[package]
name = "mcml-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
mcml-log = { path = "../mcml-log" }
mcml-config = { path = "../mcml-config" }
mcml-base = { path = "../mcml-base" }
mcml-names = { path = "../mcml-names" }
crossbeam-queue.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
zip.workspace = true
semka.workspace = true
uuid.workspace = true
