[package]
name = "mcml-game"
version = "0.1.0"
edition = "2024"

[dependencies]
mcml-names = { path = "../mcml-names" }
mcml-config = { path = "../mcml-config" }
mcml-base = { path = "../mcml-base" }
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
chrono.workspace = true
uuid.workspace = true
