[package]
name = "mcml-net"
version = "0.1.0"
edition = "2024"

[dependencies]
mcml-log = { path = "../mcml-log" }
mcml-names = { path = "../mcml-names" }
mcml-base = { path = "../mcml-base" }
mcml-config = { path = "../mcml-config" }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
scraper.workspace = true
itertools.workspace = true
