[package]
name = "mcml-config"
version = "0.1.0"
edition = "2024"

[dependencies]
mcml-log = { path = "../mcml-log" }
mcml-base = { path = "../mcml-base" }
mcml-names = { path = "../mcml-names" }
semrs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
uuid.workspace = true